codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__streaming_final_answer_keeps_working_status_visible.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "render_bottom_popup(&chat, 48)"
---
⠋ Working... (0s • esc to interrupt)


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
